2010-10-23  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/rules.vc          Update for VS10

2010-03-12  Jan Nijtmans  <nijtmans@users.sf.net>

    * generic/tkButton.h       [Bug 2956548] TkpButtonSetDefaults only
    * generic/tkButton.c       initializes one button type
    * win/tkWinButton.c
    * win/tkWinTest.c          Fix 2 minor gcc warnings
    * win/.cvsignore
    * doc/.cvsignore           Ignore man.macros

2010-02-17  Joe English  <jenglish@users.sourceforge.net>

	* generic/tkMenu.c: Defer TkMenuOptionTables cleanup
	to CallWhenDeleted() time, to ensure that the record
	doesn't get freed until after all widget instance commands
	have been deleted (Fixes [Bug#2952745]).

2010-01-23  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/bgerror.tcl: [TIP #359]: Extended Window Manager Hints
	* library/clrpick.tcl: backported from 8.5 for use on X11.
	* library/dialog.tcl:
	* library/msgbox.tcl:
	* library/tkfbox.tcl:
	* tests/unixWm.test:
	* unix/tkUnixWm.c:

2009-12-11  Donal K. Fellows  <dkf@users.sf.net>

	* library/tk.tcl (::tk::ScreenChanged): [Bug 2912473]: Stop problems
	caused by display names with a double colon in.

2009-11-01  Joe Mistachkin  <joe@mistachkin.com>

	* win/tkWinButton.c: [Bug 1739613]: The default width being stored
	in TSD cannot be put into the process-wide options table.  This fix
	allocates storage for the default width from the heap and frees it
	using an exit handler.

2009-10-25  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixColor.c (TkpGetColor): [Bug 2809525]: Impose a maximum
	X11 color name length so that it becomes impossible to blow things up
	that way.

2009-10-22  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkText.c (Tk_TextCmd, TextEditUndo, TextEditRedo)
	(TextEditCmd, updateDirtyFlag):
	* generic/tkText.h: [Patch 1469210]: Corrected handling of marking as
	dirty when inserting after an undo from a non-dirty state.

2009-10-07  Donal K. Fellows  <dkf@users.sf.net>
